yaml/substitutions/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: upsource
  namespace: upsource
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - DOMAINNAME 
    secretName: upsource-tls
  rules:
  - host: DOMAINNAME
    http:
      paths:
      - path: /*
        backend:
          serviceName: upsource-ui
          servicePort: 8080
